--- a/styles.css
+++ b/styles.css
@@ -767,6 +767,7 @@ header h1 {
   gap: 0.7rem;
 }
 .stat-line, .stat-line-hp, .stat-line-mana {
+  color: #000;
   display: flex;
   align-items: center;
   gap: 0.5rem;
